--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -28,10 +28,12 @@ services:
         image: mysql:5.7.21
         ports:
             - 3307:3306 # avoid local mysql port busy
+        expose:
+            - 3306
         volumes:
             - ./mysql/mysql.d:/etc/mysql/conf.d
             # https://stackoverflow.com/questions/39175194/docker-compose-persistent-data-mysql
-            - ../dump:/var/lib/mysql
+#            - ../dump:/var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: ""
             MYSQL_USER: "app"
@@ -46,7 +48,6 @@ services:
         - portainer_data:/data
       ports:
         - 9090:9000
-
     phpmyadmin:
       image: phpmyadmin/phpmyadmin:4.8.0
       ports:
