--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,9 +16,10 @@ services:
         expose:
             - 9000
         command: php-fpm -R -y /data/docker/php/php-fpm.conf
-#        environment:
-#            XDEBUG_CONFIG: "remote_host=217.150.72.94"
-#            PHP_IDE_CONFIG: "serverName=Test"
+        environment:
+            PHP_XDEBUG_ENABLED: 1
+            XDEBUG_CONFIG: "remote_host=217.150.72.94"
+            PHP_IDE_CONFIG: "serverName=Test"
     composer:
         image: composer:1.6.3
         volumes:
